# ClientServerTestApp

./: .gitignore  CMakeLists.txt  README.md
include/: Core.h  Deal.h  Server.h  Session.h  Transaction.h  User.h
src/: CMakeLists.txt  Client.cpp  Common.hpp  Core.cpp  Deal.cpp  MainClient.cpp  MainServer.cpp  Server.cpp  Session.cpp  Transaction.cpp  User.cpp
tests/: CMakeLists.txt  Tests.cpp
